Mon Oct 27 00:50:08 1997  Jochen Wiedmann  <joe@nt.ispsoft.de> (1.1818)

	* nodbd/Makefile.PL.in: Fixed dependencies for "xtract" files.

	* nodbd/nodbd.xs.in: Fixed ISNUM attribute in fetchinternal.

	* nodbd/statement.pm.in: Yet one more fix in the new as_string
	  method. :-(

	* nodbd/statement.pm.in: Msql::Statement::maxlength caches
	  its return value now

Sat Oct 25 16:30:01 1997  Jochen Wiedmann  <joe@nt.ispsoft.de> (1.1817)

	* Makefile.PL,dbd/Makefile.PL.in,nodbd/Makefile.PL.in: Added
	  dependencies for files being created from dbd and nodbd
	  directories via the "xtract" script.
	* nodbd/pmsql.in,nodbd/statement.pm.in: Fixed minor problems with
	  mSQL1; suggested by Andreas Koenig
	* dbd/dbd.pm.in,tests/ak-dbd.t: Removed support and tests for the
	  old connect methods.
	* nodbd/statement.pm.in: Fixed bug in Msql::Statement::maxlength.

Fri Oct 24 01:29:08 1997  Jochen Wiedmann  <joe@ispsoft.de> (1.1816)

	* dbd/myMsql.c (MyConnect): Fixed use of mysql_real_connect

	* dbd/dbdimp.c: Added automatic type detection to bind_param

	* nodbd/statement.pm.in: Modified as_string for more efficiency
	  under MySQL. Added maxlength and isnum methods. (Direct attribute
	  fetches under MySQL, calculated under mSQL.)

	* nodbd/pmsql.pm.in: Fixed bug in creation of @typelabels:
	  defined &Msql::TEXT_TYPE doesn't work before autoloading it.
	
1997-10-02  Jochen Wiedmann <joe@ispsoft.de> (1.1815)

	* dbd/dbd.xs: Fixed bug in insertid; &svsock was used instead
	  of svsock

	* Fixed bug in nodbd.xs (formerly Mysql.xs): key INSERTID had
	  length of 9 (reported by Maurice Aubrey, <maurice@hevanet.com>)

	* t/ak-dbd.t, t/akmisc.t: Added tests for mysql's insertid
	  feature.

	* Merged source trees of Mysql and Msql.
	
	* lib/M(y)sql.pm: Added some words on createdb, dropdb and
	  shutdown to the man page. Missed by Ray Zimmermann
          (rz10@cornell.edu)

	* dbd/dbd.xs.in: Implemented $dbh->do as a direct XS call.
