@@ -2,7 +2,7 @@
 
 package Bundle::Mysql;
 
-$VERSION = '~NODBD_VERSION~;
+$VERSION = '~NODBD_VERSION~';
 
 1;
 
